# command.runner

./: .bcrrc  .pylintrc  CHANGELOG.md  README.md  bcr.config  bcr.lists.config  package-lock.json  package.json  requirements.test.txt  requirements.txt  sacr.config  sample.py  setup.cfg  setup.py
.github/workflows/: pull-request.yml  python-publish.yml
.husky/: pre-commit
conda-recipe/: meta.yaml
src/shapeandshare/command/runner/: __init__.py  backend_factory.py  command_line.py  manager.py
src/shapeandshare/command/runner/backends/: __init__.py  abstract_backend.py  backend_config.py  backend_factory.py  backend_package.py
src/shapeandshare/command/runner/common/: utils.py
src/shapeandshare/command/runner/contacts/: __init__.py  backend_type.py  command_type.py  subprocess_failure_error.py  unknown_argument_error.py
src/shapeandshare/command/runner/contacts/dtos/: __init__.py  backend_model.py  config_backend.py  package.py
src/shapeandshare/command/runner/contacts/dtos/manager/: __init__.py  command_parameters.py  config_parameters.py  manager_config.py
src/shapeandshare/command/runner/contacts/errors/: __init__.py  parse_error.py  subprocess_failure_error.py  unknown_argument_error.py  unknown_backend_error.py  unknown_command_error.py  unknown_error.py
